<resources>
    <string name="app_name">Photos</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="sample_alb">Sample Album Name</string>
    <string name="sample_btn">Button</string>
    <string name="edit_button">Edit</string>
    <string name="image_description">What do you think it is?</string>
    <string name="delete_">Delete</string>
    <string name="move_btn">Move</string>
    <string name="delete_album_label">DELETE THIS ALBUM</string>
    <string name="colon">:</string>
    <string name="tags_prompt">Tags</string>
    <string name="value_hint">val1,val2,val3,&#8230;</string>
    <string name="person_tag">Person</string>
    <string name="location_tag">Location</string>
    <string name="enter_tags_prompt">Enter comma separated strings for values</string>
    <string name="name_label">Name: (required)</string>
    <string name="year_label">Year: (required)</string>
    <string name="director_label">Director:</string>
    <string name="year_hint">2018</string>
    <string name="save_label">SAVE</string>
    <string name="cancel_label">CANCEL</string>
    <string name="add">Add</string>
    <string name="bad_album_name">Name can\'t be empty or the same as other album names.</string>
    <string name="AND">AND</string>
    <string name="OR">OR</string>
    <string name="album_from_results_prompt">Enter a name for the new album to be created from these results:</string>
</resources>
