<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="120dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/lighterBlue"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit_img_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/move_img_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/move_btn" />

        <Button
            android:id="@+id/delete_img_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>