<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_tags_prompt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="25dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="67dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/person_tag" />

            <TextView
                android:id="@+id/coLLLLOn"
                android:layout_width="1dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colon" />

            <EditText
                android:id="@+id/person_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:hint="@string/value_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/location_tag" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="1sp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/colon" />

            <EditText
                android:id="@+id/location_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:gravity="center"
                android:hint="@string/value_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/cancel_photo_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="cancel"
                android:text="@string/cancel_label" />

            <Button
                android:id="@+id/save_photo_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/save_label" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>