<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/someRand"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/tag1"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:hint="Enter tag here"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/colon" />

        <EditText
            android:id="@+id/value1"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter value here"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/and_or_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="150dp"
        android:text="@string/AND" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/tag2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter tag here"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/colon" />

        <EditText
            android:id="@+id/value2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter value here"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/cancel_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:foregroundTintMode="multiply"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/search_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/action_search" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>